# inf1715

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: main.yml
cmake/: AddTester.cmake
src/: .gitignore  CMakeLists.txt  Makefile  monga-ldb.c  monga-utils.c  monga-ydb.c  monga.h  monga.l  monga.y  t.monga.c
src/monga/: CMakeLists.txt  monga.l  monga.y
src/monga/ast/: CMakeLists.txt  ast.md  ast_binding.md  ast_code_generation.md  ast_llvm.md  ast_name_binding.md  ast_typing.md  monga_ast.c  monga_ast.h  monga_ast_bind.c  monga_ast_bind.h  monga_ast_bind_stack.c  monga_ast_bind_stack.h  monga_ast_builtin.c  monga_ast_builtin.h  monga_ast_destroy.c  monga_ast_destroy.h  monga_ast_destructors.c  monga_ast_llvm.c  monga_ast_llvm.h  monga_ast_print.c  monga_ast_print.h  monga_ast_reference.c  monga_ast_reference.h  monga_ast_typedesc.c  monga_ast_typedesc.h
src/monga/compiler/: CMakeLists.txt  monga_compiler.c
src/monga/ldb/: CMakeLists.txt  monga_ldb.c
src/monga/llvmdb/: CMakeLists.txt  monga_llvm.c  monga_llvmdb.c
src/monga/utils/: CMakeLists.txt  monga_utils.c  monga_utils.h
src/monga/ydb/: CMakeLists.txt  monga_ydb.c
tests/: Makefile  add  compare  compare_io.sh  config.lua  count  edit  eval  func  generate  generate_output.sh  list  run  run_tests.sh  runtests.sh  t.monga.c  var
tests/cases/input/: 1  10  11  12  13  14  15  17  19  20  22  23  25  28  3  30  31  32  33  34  35  36  37  38  4  40  43  5  6  7  8  9
tests/cases/monga-ldb/input/: 11  16  2  21  22  27  29  3  39  41  42  8
tests/cases/monga-ldb/output/: 17  2  22  29  35  8
tests/cases/monga-ydb/input/: 1  2  5  6  7
tests/cases/monga-ydb/output/: 1  2  3  4
tests/cases/monga_ldb/input/: 10  14  18  24  26  43  44  5  6
tests/cases/monga_ldb/output/: 1  12  13  15  16  18  20  25  30  34  39  40  41  43  44  5
tests/cases/monga_llvm/output/: 1
tests/cases/monga_llvmdb/input/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  34  4  5  6  7  8  9
tests/cases/monga_llvmdb/output/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  (+16 more)
tests/cases/output/: 1  10  11  12  13  14  19  21  22  23  24  26  27  28  32  33  36  37  38  42  43  7  8
(+168 files in other folders)
